--- a/.github/workflows/python-app-push-to-aws.yml
+++ b/.github/workflows/python-app-push-to-aws.yml
@@ -83,8 +83,8 @@ jobs:
         pip install twine
 
         # Get CodeArtifact credentials
-        export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain zabalytics --query authorizationToken --output text --region us-west-2)
-        export CODEARTIFACT_REPOSITORY_URL=$(aws codeartifact get-repository-endpoint --domain zabalytics --repository pypi --format pypi --query repositoryEndpoint --output text --region us-west-2)
+        export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain test --query authorizationToken --output text --region us-west-2)
+        export CODEARTIFACT_REPOSITORY_URL=$(aws codeartifact get-repository-endpoint --domain test --repository pypi --format pypi --query repositoryEndpoint --output text --region us-west-2)
 
         echo "CODEARTIFACT_AUTH_TOKEN=$CODEARTIFACT_AUTH_TOKEN" >> $GITHUB_ENV
         echo "CODEARTIFACT_REPOSITORY_URL=$CODEARTIFACT_REPOSITORY_URL" >> $GITHUB_ENV
@@ -94,7 +94,7 @@ jobs:
       run: |
         # Delete existing package (ignore if it doesn't exist)
         aws codeartifact delete-package-versions \
-          --domain zabalytics \
+          --domain test \
           --repository pypi \
           --format pypi \
           --package file-encoder \
