--- a/.github/workflows/python-app-push-to-aws.yml
+++ b/.github/workflows/python-app-push-to-aws.yml
@@ -62,7 +62,7 @@ jobs:
       run: |
         for file in dist/*.whl; do
           if [ -f "$file" ]; then
-            aws s3 cp "$file" s3://${{ secrets.AWS_S3_BUCKET }}/wheels/
+            aws s3 cp "$file" s3://git-py-awss3/wheels/
           fi
         done
 
@@ -106,3 +106,4 @@ jobs:
           --username aws \
           --password $CODEARTIFACT_AUTH_TOKEN \
           dist/*.whl
+
