run push to codeartifact

--- a/.github/workflows/python-app-push-to-aws.yml
+++ b/.github/workflows/python-app-push-to-aws.yml
@@ -62,6 +62,7 @@ jobs:
       run: |
         for file in dist/*.whl; do
           if [ -f "$file" ]; then
+            echo "aws s3 cp $file s3://${{ secrets.AWS_S3_BUCKET }}/wheels/"
             aws s3 cp "$file" s3://${{ secrets.AWS_S3_BUCKET }}/wheels/
           fi
         done
