run push to codeartifact

--- a/.github/workflows/python-app-push-to-aws.yml
+++ b/.github/workflows/python-app-push-to-aws.yml
@@ -17,7 +17,7 @@ jobs:
   test:
     runs-on:
       - codebuild-github-actions-practice-${{ github.run_id }}-${{ github.run_attempt }}
-    environment: test
+    environment: temp
     strategy:
       matrix:
         python-version: ["3.12", "3.13"]
