run push to codeartifact

--- a/.github/workflows/python-app-push-to-aws.yml
+++ b/.github/workflows/python-app-push-to-aws.yml
@@ -95,7 +95,7 @@ jobs:
       run: |
         # Delete existing package (ignore if it doesn't exist)
         aws codeartifact delete-package-versions \
-          --domain wheels \ 
+          --domain test \ 
           --repository pypi \
           --format pypi \
           --package file-encoder \
