--- a/.github/workflows/python-app-push-to-aws.yml
+++ b/.github/workflows/python-app-push-to-aws.yml
@@ -94,13 +94,7 @@ jobs:
       if: matrix.python-version == '3.13' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       run: |
         # Delete existing package (ignore if it doesn't exist)
-        aws codeartifact delete-package-versions \
-          --domain test \ 
-          --repository pypi \
-          --format pypi \
-          --package file-encoder \
-          --versions 0.1.0 \
-          --region us-east-2 || true
+        aws codeartifact delete-package-versions --domain test --repository pypi --format pypi --package file-encoder --versions 0.1.0 --region us-east-2 || true
 
         # Upload the package
         twine upload --repository-url $CODEARTIFACT_REPOSITORY_URL \
